tests/baselines/reference/classAbstractMethodInNonAbstractClass(strict=true).errors.txt
classAbstractMethodInNonAbstractClass.ts(2,5): error TS1244: Abstract methods can only appear within an abstract class.
classAbstractMethodInNonAbstractClass.ts(2,14): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
classAbstractMethodInNonAbstractClass.ts(6,5): error TS1244: Abstract methods can only appear within an abstract class.
classAbstractMethodInNonAbstractClass.ts(6,14): error TS1245: Method 'foo' cannot have an implementation because it is marked abstract.


==== classAbstractMethodInNonAbstractClass.ts (4 errors) ====
    class A {
        abstract foo();
        ~~~~~~~~
!!! error TS1244: Abstract methods can only appear within an abstract class.
                 ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    class B {
        abstract foo() {}
        ~~~~~~~~
!!! error TS1244: Abstract methods can only appear within an abstract class.
                 ~~~
!!! error TS1245: Method 'foo' cannot have an implementation because it is marked abstract.
    }